Simplifies method invocation 😎
SIRI-721

Signed-off-by: Jakob Vogel <jvo@scireum.de>